--- a/CCLocalLibrary/Podfile
+++ b/CCLocalLibrary/Podfile
@@ -3,11 +3,11 @@ platform :ios, '8.0'
 target 'CCLocalLibrary' do
   use_frameworks!
 
-# pod 'LocalLib' , :path => '../LocalLib'
+ pod 'CCLocalLib' , :path => '../CCLocalLib'
 
-    pod 'MBProgressHUD', '~> 1.0.0'
-    pod 'SDWebImage', '~> 3.8.2'
-    pod 'MJRefresh', '~> 3.1.12'
-    pod 'AFNetworking', '~> 3.1.0'
+#    pod 'MBProgressHUD', '~> 1.0.0'
+#    pod 'SDWebImage', '~> 3.8.2'
+#    pod 'MJRefresh', '~> 3.1.12'
+#    pod 'AFNetworking', '~> 3.1.0'
 
 end
