--- a/CCLocalLibrary/Podfile
+++ b/CCLocalLibrary/Podfile
@@ -3,11 +3,16 @@ platform :ios, '8.0'
 target 'CCLocalLibrary' do
   use_frameworks!
 
-# pod 'CCLocalLib' , :path => '../CCLocalLib'
+    # pod 'CCLocalLib' , :path => '../CCLocalLib'
 
     pod 'MBProgressHUD', '~> 1.0.0'
-    pod 'SDWebImage', '~> 3.8.2'
+
+    pod 'Realm', '~> 2.10.0'
+
+    pod 'MGJRouter', '~> 0.9.3'
+    pod 'AFNetworking/Reachability', '~> 3.1.0'
+    pod 'AFNetworking/UIKit', '~> 3.1.0'
+    pod 'SDWebImage', '~> 4.1.0'
     pod 'MJRefresh', '~> 3.1.12'
-    pod 'AFNetworking', '~> 3.1.0'
 
 end
