--- a/CCLocalLibrary/Podfile
+++ b/CCLocalLibrary/Podfile
@@ -15,5 +15,6 @@ target 'CCLocalLibrary' do
     pod 'AFNetworking/UIKit', '~> 3.1.0'
     pod 'SDWebImage', '~> 4.1.0'
     pod 'MJRefresh', '~> 3.1.12'
+    pod 'FMDB', '~> 2.7.2'
 
 end
