--- a/MQExtension_Example/Podfile
+++ b/MQExtension_Example/Podfile
@@ -6,6 +6,7 @@ target 'MQExtension_Example' do
 #    pod 'MQExtensionKit/MQFull', :path => '../'
 
     pod 'MBProgressHUD', '~> 1.1.0'
+    pod 'SVProgressHUD', '~> 2.2.5'
 
     pod 'Realm', '~> 3.7.5'
 
@@ -15,5 +16,5 @@ target 'MQExtension_Example' do
     pod 'SDWebImage', '~> 4.4.2'
     pod 'MJRefresh', '~> 3.1.15'
     pod 'FMDB', '~> 2.7.2'
-
+    
 end
